replace span to div in card to fix overflow

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -25,16 +25,21 @@
 .card > .card-image {
   width: 100%;
   height: 200px;
-  object-fit: contain;
+  /* object-fit: contain; */
   user-select: none;
 }
 
 .card-name {
+  width: 250px;
   letter-spacing: -0.02em;
   text-overflow: ellipsis;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
+  word-wrap: break-word;
   overflow: hidden;
   white-space: nowrap;
-  padding: 8px 6px;
+  /* padding: 8px 19px; */
   font-weight: bold;
   max-width: 100%;
   text-transform: capitalize;
